<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="tv_register_user_info_title_navbar">Daftar</string>
    <string name="tv_register_user_info_subtitle_navbar">Buat akun dulu baru pesan makanan.</string>
    <string name="tv_register_address_title_navbar">Alamat</string>
    <string name="tv_register_address_subtitle_navbar">Lengkapin alamat kamu buat lanjut daftar akunnya.</string>
    <string name="tv_login_title_navbar">Masuk</string>
    <string name="tv_login_address_subtitle_navbar">Kalau udah punya akun langsung masuk aja gan.</string>
    <string name="et_name">Nama <font color='#FF0000'>*</font></string>
    <string name="et_email">Email <font color='#FF0000'>*</font></string>
    <string name="et_password">Kata Sandi <font color='#FF0000'>*</font></string>
    <string name="et_password_verification">Konfirmasi Kata Sandi <font color='#FF0000'>*</font></string>
    <string name="et_phone_number">Nomor HP <font color='#FF0000'>*</font></string>
    <string name="et_address">Alamat <font color='#FF0000'>*</font></string>
    <string name="et_home_number">Nomor Rumah <font color='#FF0000'>*</font></string>
    <string name="et_city">Kota <font color='#FF0000'>*</font></string>
    <string name="bt_register">Daftar Sekarang</string>
    <string name="bt_continue">Lanjutkan</string>
    <string name="bt_login">Masuk</string>
    <string name="bt_create_account">Buat Akun</string>
    <string name="tv_home_screen">YAAA AKHIRNYA MASUK JUGAA</string>
</resources>
